# metropt-pdm-framework

./: .gitignore  AGENTS.md  Experiment.md  README.md  analyze_metropt3.ipynb  anomaly_iforest_helper.py  data_utils.py  detector_model.py  iforest_data.py  iforest_metrics.py  iforest_model.py  iforest_plotting.py  logging_utils.py  main.py  metrics_alarm_islands.py  metrics_event.py  metrics_point.py  pipeline_runner.py  plot_per_maint_schedule.py  plotting.py  pyproject.toml
dataloaders/: metropt_dataloader.py  metropt_datamodule.py  sequence_dataset.py
detectors/: __init__.py  autoencoder_detector.py  base.py  iforest_detector.py  imported_recurrent_autoencoder_detector.py  lightning_vae_module.py  nianetvae_detector.py  postprocess.py  recurrent_autoencoder_detector.py  vae_models.py
pdm_eval/: __init__.py  cli.py  logging_utils.py  manifest.py  pipeline.py
pdm_eval/analysis/: __init__.py  drift.py
pdm_eval/dataloaders/: __init__.py
pdm_eval/detectors/: __init__.py  imported_recurrent_autoencoder_detector.py  postprocess.py  recurrent_autoencoder_detector.py  utils.py
pdm_eval/metrics/: __init__.py  event.py  point.py
pdm_eval/tools/: __init__.py  analyze_metropt_drift.py  plot_per_maint_schedule.py
pdm_eval/visualization/: __init__.py  plots.py
tests/: test_alarm_island_metrics.py  test_drift_analysis.py  test_metrics_event_faa.py  test_recurrent_autoencoder_detectors.py  test_threshold_policy_and_manifest.py
